# selectionfest

./: README.html  README.md  about.md  about.org  call.html  call.md  coc.html  coc.md  contact.html  index.html  index.md  index.org  package.json  programme.html  programme.md  registration.html  registration.md  selectionFest.cabal  shell.nix  site.hs  stack.yaml  venue.html  venue.md
bib/: elliott_mybib.bib
css/: fukol.hs  mini-dark.css  mini-dark.min.css  mini-default.css  mini-default.min.css  mini-lite.css  mini-lite.min.css  mini-nord.css  mini-nord.min.css  mini-sucroa.css  mini-sucroa.min.css  tachyons.min.css
js/: jquery.slim.min.js  link.js
selectionFest/: README.md  selectionFest.cabal
templates/: default.html
