name:               selectionFest
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.9.*
                  , clay == 0.12.*
                  , pandoc == 1.19.*
                  , hjsmin == 0.2.*
  ghc-options:      -threaded
  default-language: Haskell2010
